--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -1,8 +1,12 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane fx:controller="edu.insightr.gildedrose.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.AnchorPane?>
+
+<AnchorPane fx:id="anchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.insightr.gildedrose.Controller">
+    <children>
+        <ListView fx:id="listView" layoutX="23.0" layoutY="37.0" prefHeight="290.0" prefWidth="555.0" />
+        <Button fx:id="updateButton" layoutX="23.0" layoutY="345.0" mnemonicParsing="false" text="Button" />
+    </children>
+</AnchorPane>
